Fix text wrap of intro section.  Restore height of all sections.

--- a/app/public/css/style.css
+++ b/app/public/css/style.css
@@ -149,7 +149,12 @@ html {
     font-size: 7em;
 }
 
+.avoidwrap{
+    display: inline-block;
+}
+
 section{
+    min-height: 100%;
     padding-top: 50px;
     padding-bottom: 50px;
     text-align: center;
